--- a/class_test.html
+++ b/class_test.html
@@ -1,12 +1,19 @@
 <html>
 	<head>
 		<title>asanai.js-test</title>
-		<script src='asanai.js?t=1697529432' crossorigin></script>
+		<script src='asanai.js' crossorigin></script>
+		<script src='tf/tf.min.js' crossorigin></script>
+		<script src='libs/jquery.js' crossorigin></script>
+		<script src='libs/plotly-latest.min.js' crossorigin></script>
 	</head>
 	<body>
-		hallo welt
+		<h1>asanAI test case</h1>
+
+		<pre id="asanai_debug"></pre
 	</body>
 	<script>
 		var asanai = new asanAI();
+
+		$("#asanai_debug").html(JSON.stringify(asanai));
 	</script>
 </html>
