--- a/class_test.html
+++ b/class_test.html
@@ -8,7 +8,7 @@
 		<script src='libs/plotly-latest.min.js' crossorigin></script>
 	</head>
 	<body>
-		<h1>asanAI test case</h1>
+		<h1>asanAI.js test</h1>
 
 		<pre id="asanai_debug"></pre
 	</body>
