--- a/class_test.html
+++ b/class_test.html
@@ -34,7 +34,7 @@
 
 			$("#asanai_debug").html(JSON.stringify(asanai));
 
-			asanai.draw_internal_states("internal_states");
+			//asanai.draw_internal_states("internal_states");
 
 			asanai.show_and_predict_webcam_in_div("webcam_prediction");
 
