--- a/class_test.html
+++ b/class_test.html
@@ -10,6 +10,8 @@
 	<body>
 		<h1>asanAI.js test</h1>
 
+		<button onclick="asanai.toggle_webcam(this)">Stop webcam</button>
+
 		<pre id="asanai_debug"></pre>
 		
 		<div id="webcam_prediction"></div>
