--- a/class_test.html
+++ b/class_test.html
@@ -37,6 +37,7 @@
 			$("#asanai_debug").html(JSON.stringify(asanai));
 
 			asanai.show_internals("internal_states");
+			//asanai.hide_internals();
 
 			asanai.show_and_predict_webcam_in_div("webcam_prediction");
 
