--- a/class_test.html
+++ b/class_test.html
@@ -41,14 +41,14 @@
 
 			//$("#asanai_debug").html(JSON.stringify(asanai));
 
-			//asanai.show_internals("internal_states");
+			asanai.show_internals("internal_states");
 			//asanai.hide_internals();
 
-			//asanai.show_and_predict_webcam_in_div("webcam_prediction");
+			asanai.show_and_predict_webcam_in_div("webcam_prediction");
 
 			asanai.draw_fcnn("fcnn_div");
 
-			//asanai.write_model_summary("summary_pre")
+			asanai.write_model_summary("summary_pre")
 
 			asanai.write_tensors_info("memory");
 		</script>
