fixed some stuff

--- a/class_test.html
+++ b/class_test.html
@@ -48,9 +48,9 @@
 
 			asanai.show_and_predict_webcam_in_div("webcam_prediction");
 
-			asanai.draw_fcnn("fcnn_div");
+			//asanai.draw_fcnn("fcnn_div");
 
-			asanai.write_model_summary("summary_pre")
+			//asanai.write_model_summary("summary_pre")
 
 			asanai.write_tensors_info("memory");
 		</script>
