--- a/class_test.html
+++ b/class_test.html
@@ -11,17 +11,10 @@
 		<h1>asanAI.js test</h1>
 
 		<pre id="memory"></pre>
-
-		<!--<pre id="asanai_debug"></pre>-->
-
 		<pre id="summary_pre"></pre>
-		
 		<button onclick="asanai.toggle_webcam(this)">Stop webcam</button>
-
 		<div id="webcam_prediction"></div>
-
 		<div id="internal_states"></div>
-
 		<div id="fcnn_div"></div>
 
 		<script>
@@ -41,16 +34,14 @@
 
 			asanai.set_divide_by(255);
 
-			//$("#asanai_debug").html(JSON.stringify(asanai));
-
 			asanai.show_internals("internal_states");
-			//asanai.hide_internals();
+			asanai.hide_internals();
 
 			asanai.show_and_predict_webcam_in_div("webcam_prediction");
 
-			//asanai.draw_fcnn("fcnn_div");
+			asanai.draw_fcnn("fcnn_div");
 
-			//asanai.write_model_summary("summary_pre")
+			asanai.write_model_summary("summary_pre")
 
 			asanai.write_tensors_info("memory");
 		</script>
