--- a/class_test.html
+++ b/class_test.html
@@ -10,6 +10,8 @@
 	<body>
 		<h1>asanAI.js test</h1>
 
+		<img id="test_image" src="_gui/logo.png" />
+		<pre id="test_image_prediction"></pre>
 		<pre id="memory"></pre>
 		<pre id="summary_pre"></pre>
 		<button onclick="asanai.toggle_webcam(this)">Stop webcam</button>
@@ -18,32 +20,36 @@
 		<div id="fcnn_div"></div>
 
 		<script>
-			var model = tf.sequential({  
-				layers: [
-					tf.layers.conv2d({filters: 4, kernelSize: [3, 3], inputShape: [20, 20, 3], activation: "relu"}),
-					tf.layers.conv2d({filters: 4, kernelSize: [3, 3], activation: "relu"}),
-					tf.layers.flatten(),
-					tf.layers.dense({units: 5, activation: "relu"}),
-					tf.layers.dense({units: 4, activation: "softmax"})
-				]
+			$( document ).ready(function() {
+				var model = tf.sequential({  
+					layers: [
+						tf.layers.conv2d({filters: 4, kernelSize: [3, 3], inputShape: [20, 20, 3], activation: "relu"}),
+						tf.layers.conv2d({filters: 4, kernelSize: [3, 3], activation: "relu"}),
+						tf.layers.flatten(),
+						tf.layers.dense({units: 5, activation: "relu"}),
+						tf.layers.dense({units: 4, activation: "softmax"})
+					]
+				});
+
+				model.compile({ optimizer: "adam", loss: "categoricalCrossentropy" });
+
+				var asanai = new asanAI({model: model});
+
+				asanai.set_divide_by(255);
+
+				asanai.show_internals("internal_states");
+				//asanai.hide_internals();
+
+				//asanai.show_and_predict_webcam_in_div("webcam_prediction");
+
+				asanai.predict_image("test_image", "test_image_prediction");
+
+				asanai.draw_fcnn("fcnn_div");
+
+				asanai.write_model_summary("summary_pre")
+
+				asanai.write_tensors_info("memory");
 			});
-
-			model.compile({ optimizer: "adam", loss: "categoricalCrossentropy" });
-
-			var asanai = new asanAI({model: model});
-
-			asanai.set_divide_by(255);
-
-			asanai.show_internals("internal_states");
-			asanai.hide_internals();
-
-			asanai.show_and_predict_webcam_in_div("webcam_prediction");
-
-			asanai.draw_fcnn("fcnn_div");
-
-			asanai.write_model_summary("summary_pre")
-
-			asanai.write_tensors_info("memory");
 		</script>
 	</body>
 </html>
