--- a/class_test.html
+++ b/class_test.html
@@ -35,6 +35,8 @@
 
 				asanai.set_divide_by(255);
 
+				asanai.set_labels(["a", "b", "c", "d"]);
+
 				//asanai.show_internals("internal_states");
 				//asanai.hide_internals();
 
