predict bars gehen

--- a/class_test.html
+++ b/class_test.html
@@ -39,16 +39,16 @@
 
 				asanai.set_labels(["a", "b", "c", "d"]);
 
-				//asanai.show_internals("internal_states");
+				asanai.show_internals("internal_states");
 				//asanai.hide_internals();
 
-				//asanai.show_and_predict_webcam_in_div("webcam_prediction");
+				asanai.show_and_predict_webcam_in_div("webcam_prediction");
 
 				asanai.predict_image("test_image", "test_image_prediction");
 
-				//asanai.draw_fcnn("fcnn_div");
+				asanai.draw_fcnn("fcnn_div");
 
-				//asanai.write_model_summary("summary_pre")
+				asanai.write_model_summary("summary_pre")
 
 				asanai.write_tensors_info("memory");
 			});
