--- a/class_test.html
+++ b/class_test.html
@@ -44,7 +44,7 @@
 
 				asanai.show_and_predict_webcam_in_div("webcam_prediction");
 
-				//asanai.predict_image("test_image", "test_image_prediction");
+				asanai.predict_image("test_image", "test_image_prediction");
 
 				asanai.draw_fcnn("fcnn_div");
 
