--- a/class_test.html
+++ b/class_test.html
@@ -62,8 +62,8 @@
 			});
 
 			function test_model_switch () {
-				fl = tf.layers.dense({units: 3, activation: "softmax", inputShape: [20, 20, 3]}); 
-				xxx = tf.sequential({layers: [fl]}); 
+				var fl = tf.layers.dense({units: 3, activation: "softmax", inputShape: [20, 20, 3]}); 
+				var xxx = tf.sequential({layers: [fl]}); 
 				xxx.compile({ optimizer: "adam", loss: "categoricalCrossentropy" }); 
 				asanai.set_model(xxx)
 			}
