--- a/class_test.html
+++ b/class_test.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<pre id="memory"></pre>
+		<div id="test_images"></div>
 		<img id="test_image" src="_gui/logo.png" width=50 height=50 />
 		<pre id="test_image_prediction"></pre>
 		<pre id="summary_pre"></pre>
