--- a/class_test.html
+++ b/class_test.html
@@ -88,11 +88,11 @@
 
 			function load_test_images () {
 				var xxx = asanai.load_image_urls_to_div_and_tensor("test_images", [
-					["traindata/signs/example/a_fire.png", "fire"]
-					["traindata/signs/example/b_mandatory.png", "fire"]
-					["traindata/signs/example/c_prohibition.png", "fire"]
-					["traindata/signs/example/d_rescue.png", "fire"]
-					["traindata/signs/example/e_warning.png", "fire"]
+					["traindata/signs/example/a_fire.png", "fire"],
+					["traindata/signs/example/b_mandatory.png", "mandatory"],
+					["traindata/signs/example/c_prohibition.png", "prohibition"],
+					["traindata/signs/example/d_rescue.png", "rescue"],
+					["traindata/signs/example/e_warning.png", "warning"]
 				], 1);
 
 				console.log(xxx);
