--- a/class_test.html
+++ b/class_test.html
@@ -99,18 +99,45 @@
 			}
 
 			async function load_test_images_and_train () {
+				var new_model_struct = [
+					{conv2d: {filters: 4, kernelSize: [3, 3], inputShape: [20, 20, 3], activation: "relu"}},
+					{conv2d: {filters: 4, kernelSize: [3, 3], activation: "relu"}},
+					{conv2d: {filters: 4, kernelSize: [3, 3], activation: "relu"}},
+					{flatten: {}},
+					{dense: {units: 10, activation: "relu"}},
+					{dense: {units: 5, activation: "softmax"}}
+				];
+
+				asanai.create_model_from_model_data(new_model_struct, optimizer_config);
+
 				var loaded_data = asanai.load_image_urls_to_div_and_tensor("test_images", [
 					["traindata/signs/example/a_fire.png", "fire"],
 					["traindata/signs/example/b_mandatory.png", "mandatory"],
 					["traindata/signs/example/c_prohibition.png", "prohibition"],
 					["traindata/signs/example/d_rescue.png", "rescue"],
-					//["traindata/signs/example/e_warning.png", "warning"]
+					["traindata/signs/example/e_warning.png", "warning"],
+
+					["traindata/signs/warning/120px-D-W028_Warnung_vor_Rutschgefahr.svg.png", "warning"],
+					["traindata/signs/warning/120px-Laser-symbol-text-bn.svg.png", "warning"],
+
+					["traindata/signs/prohibition/120px-DIN_4844-2_D-P022.svg.png", "prohibition"],
+					["traindata/signs/prohibition/120px-DIN_4844-2_D-P006.svg.png", "prohibition"],
+
+					["traindata/signs/fire/116px-Fire_Class_B.svg.png", "fire"],
+					["traindata/signs/fire/120px-F001.svg.png", "fire"],
+
+					["traindata/signs/rescue/120px-E003.svg.png", "rescue"],
+					["traindata/signs/rescue/120px-E004.svg.png", "rescue"]
 				], 1);
+
 				console.log(loaded_data);
 			
-				var history = await asanai.fit(loaded_data.x, loaded_data.y, {epochs: 10, batchSize: 5});
+				var history = await asanai.fit(loaded_data.x, loaded_data.y, {epochs: 100, batchSize: 5});
 
 				console.log("history:", history);
+
+				await asanai.dispose(loaded_data.x);
+				await asanai.dispose(loaded_data.y);
 			}
 		</script>
 	</body>
