--- a/class_test.html
+++ b/class_test.html
@@ -132,8 +132,11 @@
 					["traindata/signs/fire/120px-F001.svg.png", "fire"],
 
 					["traindata/signs/rescue/120px-E003.svg.png", "rescue"],
-					["traindata/signs/rescue/120px-E004.svg.png", "rescue"]
-				], 1);
+					["traindata/signs/rescue/120px-E004.svg.png", "rescue"],
+
+					["traindata/signs/mandatory/120px-DIN_4844-2_D-M003.svg.png", "mandatory"],
+					["traindata/signs/mandatory/120px-DIN_4844-2_D-M009.svg.png", "mandatory"]
+				]);
 
 				console.log(loaded_data);
 			
