--- a/class_test.html
+++ b/class_test.html
@@ -63,7 +63,7 @@
 				asanai.write_tensors_info("memory");
 
 				asanai.set_default_bar_color("yellow")
-				asanai.set_max_bar_color("lightgreen")
+				asanai.set_max_bar_color("#f0f0f0")
 			});
 
 			function test_model_switch () {
