--- a/class_test.html
+++ b/class_test.html
@@ -44,6 +44,9 @@
 
 				asanai = new asanAI({model_data: model_data, optimizer_config: optimizer_config});
 
+				asanai.set_default_bar_color("yellow")
+				asanai.set_max_bar_color("pink")
+
 				asanai.set_divide_by(255);
 
 				asanai.set_labels(["a", "b", "c", "d"]);
@@ -61,9 +64,6 @@
 				asanai.write_model_summary("summary_pre")
 
 				asanai.write_tensors_info("memory");
-
-				asanai.set_default_bar_color("yellow")
-				asanai.set_max_bar_color("#f0f0f0")
 			});
 
 			function test_model_switch () {
