--- a/class_test.html
+++ b/class_test.html
@@ -46,6 +46,7 @@
 
 				asanai.set_default_bar_color("yellow")
 				asanai.set_max_bar_color("pink")
+				asanai.set_bar_background_color("orange")
 
 				asanai.set_divide_by(255);
 
