--- a/class_test.html
+++ b/class_test.html
@@ -65,7 +65,7 @@
 				asanai = new asanAI({model_data: model_data, optimizer_config: optimizer_config});
 
 				asanai.set_default_bar_color("yellow")
-				asanai.set_max_bar_color("pink")
+				asanai.set_max_bar_color("green")
 				asanai.set_bar_background_color("orange")
 
 				asanai.set_divide_by(255);
