--- a/class_test.html
+++ b/class_test.html
@@ -64,6 +64,8 @@
 
 				asanai = new asanAI({model_data: model_data, optimizer_config: optimizer_config});
 
+				asanai.set_asanai_name("asanai");
+
 				asanai.set_default_bar_color("yellow")
 				asanai.set_max_bar_color("#ff00aa")
 				asanai.set_bar_background_color("orange")
