--- a/class_test.html
+++ b/class_test.html
@@ -6,6 +6,7 @@
 		<script src='tf/tf.min.js' crossorigin></script>
 		<script src='libs/jquery.js' crossorigin></script>
 		<script src='libs/plotly-latest.min.js' crossorigin></script>
+		<script src='libs/temml/temml.js' crossorigin></script>
 		<style>
 			/* This style is optional */
 			.float-container {
