--- a/class_test.html
+++ b/class_test.html
@@ -7,6 +7,15 @@
 		<script src='libs/jquery.js' crossorigin></script>
 		<script src='libs/plotly-latest.min.js' crossorigin></script>
 		<script src='libs/temml/temml.js' crossorigin></script>
+
+		<!-- Required for Ribbon -->
+
+		<link href="css/new_ribbon.css" rel="stylesheet" type="text/css" />
+		<link href="css/soft_button.css" rel="stylesheet" type="text/css" />
+		<script type="text/javascript" src="libs/ribbon.js"></script>
+		<link href="css/ribbon-dark.css" rel="stylesheet" type="text/css" />
+		<script type="text/javascript" src="libs/jquery.tooltip.min.js"></script>
+
 		<style>
 			/* This style is optional */
 			.float-container {
@@ -22,7 +31,124 @@
 		</style>
 	</head>
 	<body>
-		<pre id="memory"></pre>
+
+		<div id="ribbon">
+			<span class="ribbon-window-title" id='memory'>asanai.js</span>
+
+			<div class="ribbon-tab file" id="file-tab">
+				<span class="ribbon-title">File</span>
+				<div class="ribbon-backstage">
+					This is the Backstage.<br/><br/>
+
+					<div class="button big">
+						<span class="label">Open</span>
+						<span class="desc">Open a document from your computer</span>
+					</div><br/>
+					<div class="button big">
+						<span class="label">Save</span>
+						<span class="desc">Save your document to your computer</span>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="ribbon-tab" id="format-tab">
+				<span class="ribbon-title" id='home_tab'>Home</span>
+				<div class="ribbon-section">
+					<span class="section-title">Tables</span>
+					<div class="ribbon-button ribbon-button-large" id="add-table-btn">
+						<span class="button-title">Add<br/>Table</span>
+						<span class="button-help">This button will add a table to your document.</span>
+						<img class="ribbon-icon ribbon-normal" src="icons/normal/new-table.png" />
+						<img class="ribbon-icon ribbon-hot" src="icons/hot/new-table.png" />
+						<img class="ribbon-icon ribbon-disabled" src="icons/disabled/new-table.png" />
+					</div>
+					<div class="ribbon-button ribbon-button-large" id="open-table-btn">
+						<span class="button-title">Open<br/>Table</span>
+						<span class="button-help">This button will open a table and add it to your document.</span>
+						<img class="ribbon-icon ribbon-normal" src="icons/normal/open-table.png" />
+						<img class="ribbon-icon ribbon-hot" src="icons/hot/open-table.png" />
+						<img class="ribbon-icon ribbon-disabled" src="icons/disabled/open-table.png" />
+					</div>
+					<div class="ribbon-button ribbon-button-large disabled" id="del-table-btn">
+						<span class="button-title">Remove<br/>Table</span>
+						<span class="button-help">This button will remove the selected table from your document.</span>
+						<img class="ribbon-icon ribbon-normal" src="icons/normal/delete-table.png" />
+						<img class="ribbon-icon ribbon-hot" src="icons/hot/delete-table.png" />
+						<img class="ribbon-icon ribbon-disabled" src="icons/disabled/delete-table.png" />
+					</div>
+				</div>
+
+				<div class="ribbon-section">
+					<span class="section-title">Pages</span>
+					<div class="ribbon-button ribbon-button-large" id="add-page-btn">
+						<span class="button-title">Add<br/>Page</span>
+						<span class="button-help">This button will add a page to your document.</span>
+						<img class="ribbon-icon ribbon-normal" src="icons/normal/new-page.png" />
+						<img class="ribbon-icon ribbon-hot" src="icons/hot/new-page.png" />
+						<img class="ribbon-icon ribbon-disabled" src="icons/disabled/new-page.png" />
+					</div>
+					<div class="ribbon-button ribbon-button-large" id="open-page-btn">
+						<span class="button-title">Open<br/>Page</span>
+						<span class="button-help">This button will open a page and add it to your document.</span>
+						<img class="ribbon-icon ribbon-normal" src="icons/normal/open-page.png" />
+						<img class="ribbon-icon ribbon-hot" src="icons/hot/open-page.png" />
+						<img class="ribbon-icon ribbon-disabled" src="icons/disabled/open-page.png" />
+					</div>
+					<div class="ribbon-button ribbon-button-large disabled" id="del-page-btn">
+						<span class="button-title">Remove<br/>Page</span>
+						<span class="button-help">This button will remove the selected page from your document.</span>
+						<img class="ribbon-icon ribbon-normal" src="icons/normal/delete-page.png" />
+						<img class="ribbon-icon ribbon-hot" src="icons/hot/delete-page.png" />
+						<img class="ribbon-icon ribbon-disabled" src="icons/disabled/delete-page.png" />
+					</div>
+				</div>
+
+
+				<div class="ribbon-section">
+					<span class="section-title">Actions</span>
+					<div class="ribbon-button ribbon-button-small" id="run-btn">
+						<span onclick='load_test_images_and_train()' class="button-title">Run</span>
+						<span class="button-help">This button will run the program.</span>
+						<img class="ribbon-icon ribbon-normal" src="icons/normal/run.png" />
+						<img class="ribbon-icon ribbon-hot" src="icons/hot/run.png" />
+						<img class="ribbon-icon ribbon-disabled" src="icons/disabled/run.png" />
+					</div>
+					<div class="ribbon-button ribbon-button-small" id="repeat-btn">
+						<span class="button-title">Repeat</span>
+						<span class="button-help">This button will repeat something.</span>
+						<img class="ribbon-icon ribbon-normal" src="icons/normal/repeat.png" />
+						<img class="ribbon-icon ribbon-hot" src="icons/hot/repeat.png" />
+						<img class="ribbon-icon ribbon-disabled" src="icons/disabled/repeat.png" />
+					</div>
+					<div class="ribbon-button ribbon-button-small disabled" id="save-btn">
+						<span class="button-title">Save</span>
+						<span class="button-help">This button will save your document.</span>
+						<img class="ribbon-icon ribbon-normal" src="icons/normal/save.png" />
+						<img class="ribbon-icon ribbon-hot" src="icons/hot/save.png" />
+						<img class="ribbon-icon ribbon-disabled" src="icons/disabled/save.png" />
+					</div>
+				</div>
+
+			</div>
+			<div class="ribbon-tab" id="next-tab">
+				<span class="ribbon-title">Options</span>
+				<div class="ribbon-section">
+					<span class="section-title">More Stuff</span>
+					<div class="ribbon-button ribbon-button-large">
+						<span class="button-title">Other<br/>Feature</span>
+						<span class="button-help">This button will do something else.</span>
+						<img class="ribbon-icon ribbon-normal" src="icons/normal/bullet-orange.png" />
+					</div>
+					<div class="ribbon-button ribbon-button-large disabled" id="other-btn-2">
+						<span class="button-title">Remove<br/>Table</span>
+						<span class="button-help">This button will remove the selected table from your document.</span>
+						<img class="ribbon-icon ribbon-normal" src="icons/normal/delete-table.png" />
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<pre>====</pre>
 		<div id="test_images"></div>
 		<pre>====</pre>
@@ -182,6 +308,39 @@
 				await asanai.dispose(loaded_data.x);
 				await asanai.dispose(loaded_data.y);
 			}
+
+
+			$(document).ready(function () {
+				$('#ribbon').ribbon();
+
+				$('#enable-btn').click(function() {
+					$('#del-table-btn').enable();
+					$('#del-page-btn').enable();
+					$('#save-btn').enable();
+					$('#other-btn-2').enable();
+
+					$('#enable-btn').hide();
+					$('#disable-btn').show();
+				});
+
+				$('#disable-btn').click(function() {
+					$('#del-table-btn').disable();
+					$('#del-page-btn').disable();
+					$('#save-btn').disable();
+					$('#other-btn-2').disable();
+
+					$('#disable-btn').hide();
+					$('#enable-btn').show();
+				});
+
+				$('.ribbon-button').click(function() {
+					if (this.isEnabled()) {
+						alert($(this).attr('id') + ' clicked');
+					}
+				});
+
+				$("#home_tab").click(); // quickfix
+			});
 		</script>
 	</body>
 </html>
