--- a/class_test.html
+++ b/class_test.html
@@ -5,6 +5,7 @@
 		<script src='asanai.js' crossorigin></script>
 		<script src='tf/tf.min.js' crossorigin></script>
 		<script src='libs/jquery.js' crossorigin></script>
+		<script src='libs/jquery-ui.js' crossorigin></script>
 		<script src='libs/plotly-latest.min.js' crossorigin></script>
 		<script src='libs/temml/temml.js' crossorigin></script>
 
