--- a/class_test.html
+++ b/class_test.html
@@ -337,7 +337,7 @@
 
 				$('.ribbon-button').click(function() {
 					if (this.isEnabled()) {
-						alert($(this).attr('id') + ' clicked');
+						asanai.log($(this).attr('id') + ' clicked');
 					}
 				});
 
