--- a/class_test.html
+++ b/class_test.html
@@ -78,7 +78,7 @@
 				asanai = new asanAI({model_data: model_data, optimizer_config: optimizer_config});
 
 				asanai.show_status_bar();
-				//asanai.show_ribbon();
+				//asanai.show_ribbon(); // yet tbd
 				asanai.set_asanai_name("asanai");
 
 				asanai.set_default_bar_color("yellow")
