--- a/class_test.html
+++ b/class_test.html
@@ -32,8 +32,11 @@
 		</style>
 	</head>
 	<body>
+		<!--<div id="ribbon_content"></div>-->
 
-		<div id="ribbon_content"></div>
+		<button onclick="test_model_switch()">Test model switch 1</button>
+		<button onclick="test_model_switch_two()">Test model switch 2</button>
+		<button onclick="test_model_switch_three()">Test model switch 3</button>
 
 		<pre>====</pre>
 		<div id="test_images"></div>
