--- a/class_test.html
+++ b/class_test.html
@@ -8,6 +8,7 @@
 		<script src='libs/jquery-ui.js' crossorigin></script>
 		<script src='libs/plotly-latest.min.js' crossorigin></script>
 		<script src='libs/temml/temml.js' crossorigin></script>
+		<script src='libs/md5.umd.min.js' crossorigin></script>
 
 		<!-- Required for Ribbon -->
 
@@ -42,6 +43,7 @@
 		<pre>====</pre>
 		<div id="test_images"></div>
 		<div id="plotly_history"></div>
+		<div id="math_tab_code"></div>
 		<pre>====</pre>
 
 		<div class="float-container">
