--- a/class_test.html
+++ b/class_test.html
@@ -85,7 +85,8 @@
 				asanai = new asanAI({
 					model_data: model_data,
 					optimizer_config: optimizer_config,
-					translations_file: "translations.php?print=1"
+					translations_file: "translations.php?print=1",
+					math_tab_code_div: "math_tab_code"
 				});
 
 				asanai.show_status_bar();
