--- a/class_test.html
+++ b/class_test.html
@@ -69,7 +69,7 @@
 		<div id="fcnn_div"></div>
 
 		<script>
-			var optimizer_config = { optimizer: "adam", loss: "categoricalCrossentropy" }
+			var optimizer_config = { optimizer: "adam", loss: "categoricalCrossentropy", "learningRate": 0.001 }
 			var asanai;
 
 			$(document).ready(async function() {
