--- a/class_test.html
+++ b/class_test.html
@@ -44,6 +44,7 @@
 		<div id="test_images"></div>
 		<div id="plotly_history"></div>
 		<div id="math_tab_code"></div>
+		<div class="confusion_matrix"></div>
 		<pre>====</pre>
 
 		<div class="float-container">
